libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__index_too_large.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Index too large
expression: ".18446744073709551616"
info:
  kind: Err
---
.18446744073709551616
 ^
invalid field
number too large to fit in target type
