libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__invalid_character.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Invalid character in expression
expression: foo$bar
info:
  kind: Err
---
foo$bar
   ^
