libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__invalid_field_name.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Invalid field name
expression: ".@field"
info:
  kind: Err
---
.@field
  ^
