libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__invalid_start.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Starting with field access
expression: ".foo"
info:
  kind: Err
---
.foo
 ^
