libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__invalid_start_2.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Starting with index access
expression: "[0]"
info:
  kind: Err
---
[0]
^
