libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__missing_field_name.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Missing field name
expression: "."
info:
  kind: Err
---
.
 ^
invalid field
