libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__mixed_access_2.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Index then field access
expression: "foo[0].bar"
info:
  kind: Ok
---
Expr#4294967040@7
  ExprKind (Field)
    FieldExpr#4294967040@7 (field: bar)
      Expr#4294967040@6
        ExprKind (Index)
          IndexExpr#4294967040@6
            Expr#4294967040@3
              ExprKind (Path)
                Path#4294967040@3 (rooted: false)
                  PathSegment#4294967040@2 (name: foo)
            Expr#4294967040@4
              ExprKind (Literal)
                LiteralExpr#4294967040@4
                  LiteralKind (Integer)
                    IntegerLiteral (0)
