libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__multi_digit_index.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Multi-digit index
expression: "[123]"
info:
  kind: Ok
---
Index(
    LiteralExpr {
        id: NodeId(
            4294967040,
        ),
        span: SpanId(
            1,
        ),
        kind: Integer(
            IntegerLiteral {
                value: Symbol(
                    "123",
                ),
            },
        ),
        type: None,
    },
)
