libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__non_numeric_index.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Non-numeric index
expression: "[abc]"
info:
  kind: Err
---
[abc]
 ^
invalid index
