libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__numeric_field.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Numeric field name
expression: ".123"
info:
  kind: Ok
---
Field(
    Ident {
        span: SpanId(
            1,
        ),
        name: Symbol(
            "123",
        ),
        kind: Lexical,
    },
)
